<?xml version="1.0"?>
<package format="2">
  <name>omnibot_description</name>
  <version>0.0.0</version>
  <description>The omnibot_description package</description>
  <maintainer email="444lhc@gmail.com">sreejith</maintainer>
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <license>MIT</license>
  <url type="repository">https://github.com/4lhc/AMR_omnibot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
